--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Roboto:wght@300&family=Work+Sans:wght@200;300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -31,6 +35,8 @@ body {
 }
 
 .logo {
+    text-align: center;
+    width: 10%;
     font-size: 25px;
     color: aliceblue;
     text-transform: uppercase;
@@ -43,6 +49,7 @@ body {
 }
 
 .menu .navbar ul li a{
+    font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 18px;
     padding: 20px;
     color: aliceblue;
@@ -86,6 +93,7 @@ main{
     width: 100%;
 }
 h1 {
+    
     font-size: 50px;
     width: 80%;
     font-weight:800;
@@ -99,7 +107,7 @@ h1 {
     gap: 20px;
 }
 .heroe p{
-
+    font-family:var(--typocard);
     width: 80%;
 }
 .heroe a{
@@ -163,6 +171,7 @@ h1 {
     align-items: center;
 }
 .item7 h2{
+    font-family: 'Segoe UI', sans-serif;
     font-size: 16px;
 }
 .item7 a{
@@ -174,8 +183,9 @@ h1 {
     width: 50%;
 }
 .item7 p{
+    
     font-size: 15px;
-    color: #051937;
+    
 }
 .item8{
     grid-area: item8;
@@ -185,6 +195,7 @@ h1 {
     align-items: center;
 }
 .item8 h2{
+    font-family: 'Segoe UI', sans-serif;
     font-size: 16px;
 }
 .item8 p{
@@ -206,6 +217,7 @@ h1 {
     align-items: center;
 }
 .item9 h2{
+    font-family: 'Segoe UI', sans-serif;
     font-size: 16px;
 }
 .item9 p{
@@ -227,6 +239,7 @@ h1 {
     align-items: center;
 }
 .item10 h2{
+    font-family: 'Segoe UI', sans-serif;
     font-size: 16px;
 }
 .item10 p{
@@ -248,6 +261,7 @@ h1 {
     align-items: center;
 }
 .item11 h2{
+    font-family: 'Segoe UI', sans-serif;
     font-size: 16px;
 }
 .item11 p{
@@ -269,6 +283,7 @@ h1 {
     align-items: center;
 }
 .item12 h2{
+    font-family: 'Segoe UI', sans-serif;
     font-size: 16px;
 }
 .item12 p{
@@ -291,13 +306,12 @@ h1 {
         text-align: center;
     }
     .benificios h3{
+        font-family: 'Segoe UI', sans-serif;
         text-align: center;
     }
     .beneficios p{
+        font-family:'Helvetica Neue',;
         text-align: center;
-    }
-    .benificios h4{
-        font-size: 25px;
     }
     .footer{
         width: 90%;
@@ -320,6 +334,97 @@ h1 {
         width: 20%;
         align-items: end;
     }
+    @media (max-width:768px){
+        header{
+            max-width: 768px;
+        }
+        .content {
+            min-height: 70px;
+            max-width: 768px;
+        }
+        .img{
+            width: 30%;
+        }
+        .maiami{
+            display: flex;
+            justify-content: center;
+            width: 70%;
+            height: 300%;
+            gap: 10px;
+            display: grid;
+            grid-template-columns: 150px 120px 150px 150px;
+            grid-template-rows: 70px 210px;
+            grid-template-areas:
+        "item2 item2 item2 item2"
+        "item1 none item3 item3"
+        "item1 none item4 item4";
+    } 
+    .item1{
+        height: 100%;
+        width: 135%;
+        grid-area: item1;
+    }
+    .item1 img{
+        height: 95%;
+        width: 135%;
+    }
+    .item2{
+        width: 100%;
+        grid-area: item2;
+    }
+    .item2 img{
+        width: 100%;
+    }
+    .item3{
+        width: 100%;
+        grid-area: item3;
+    }
+    .item3 img{
+        width: 100%;
+    }
+    .item4{
+        width: 100%;
+        grid-area: item4;
+    }
+    .item4 img{
+        width: 100%;
+    }
+    .menu{
+        top: 0;
+        padding: 20px;
+        max-width: 768px;
+    }
+    .item7{
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .item7 h2{
+        font-family: 'Segoe UI', sans-serif;
+        font-size: 16px;
+    }
+    .item7 a{
+        border-radius: 20px;
+        font-size: 15px;
+        color: aliceblue;
+        background-color: #1dd616;
+        padding: 15px;
+        width: 50%;
+    }
+    .item7 p{
+        
+        font-size: 15px;
+        
+    }
+    .cards{
+        width: 100%;
+    }
+    .footer section div{
+        width: 100%;
+    }
+}
+
 @media (max-width:440px) {
     body{
         max-width: 440px;
@@ -410,16 +515,19 @@ h1 {
 
     }
     .item1{
+        height: 100%;
+        width: 100%;
         grid-area: item1;
-        height: 50%;
     }
     .item2{
         grid-area: item2;
     }
     .item3{
+        width: 95%;
         grid-area: item3;
     }
     .item4{
+        width: 95%;
         grid-area: item4;
     }
     .maiami img{
